# thespacedata

./: .dockerignore  .gitignore  ADMIN_DASHBOARD.md  ADMIN_FIX.md  AWS_SETUP.md  CHRISTMAS_FRAME_SETUP.md  DATABASE_SETUP.md  DEPLOY_INSTRUCTIONS.md  DOMAIN_SETUP.md  Dockerfile  REFACTORING_SUMMARY.md  SETUP.md  abuseProtection.js  app.json  auth.js  database.js  emailService.js  entrypoint.sh  package-lock.json  package.json  procfile  requirements.txt  server.js  sessionStore.js  settings.py  trust-policy-updated.json  urls.py.remove
WEBSITE_PAGES/: DEPLOYMENT.md  README.md
app/: _layout.tsx  index.tsx
color_picker/: apps.py  forms.py  urls.py  utils.py  views.py
config/: constants.js  multer.js
copilot/: .workspace
core/: views.py
influzer-mobile/: package-lock.json  package.json
research_assistant/: .env.example  .gitignore  cron-setup.md  env.example  pyproject.toml  run-weekly-report.sh  setup-cron.sh
research_assistant/src/research_assistant/: __init__.py  __main__.py  cli.py  competitors.py  config.py  email_sender.py
research_assistant/src/research_assistant/agents/: __init__.py  competitor_analyst.py  fact_checker.py  researcher.py  synthesizer.py
research_assistant/src/research_assistant/exporters/: __init__.py  docx_exporter.py  pptx_exporter.py
research_assistant/src/research_assistant/graph/: __init__.py  competitor_workflow.py  state.py  workflow.py
research_assistant/src/research_assistant/tools/: __init__.py  competitor_news.py  financial_data.py  rss_utils.py  web_search.py  wikipedia.py
research_assistant/tests/: __init__.py
(+176 files in other folders)
